pool join form size fix

--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -37,6 +37,7 @@ $white: #F6F7F9;
     position: absolute;
     top: 0px;
     left: 10px;
+    padding-right: 10px;
     display: flex;
     justify-content: space-between;
     font-size: 20px;
@@ -68,6 +69,13 @@ $white: #F6F7F9;
       background: $lt-primary;
       transition: .2s;
       color: white;
+        i {
+        padding-right: 10px;
+        }
+      }
+
+      button:hover {
+        color: red;
       }
     }
   }
@@ -91,81 +99,11 @@ $white: #F6F7F9;
     color: #AF1E2C;
   }
 
-  .pool-join-button, .pool-create-button {
-    width: 100%;
-    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: .25s;
-    margin-top: 5px;
-    padding: 7px 5px;
-
-    i {
-      padding-right: 10px;
-    }
-  }
-
-  .pool-join-button:hover, .pool-create-button:hover {
-    color: #AF1E2C;
-  }
-
-  .pool-create-form {
-    width: 200px;
-    position: absolute;
-    bottom: 0px;
-    // left: -205px;
-    left: -205px;
-    padding: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
-    opacity: 0;
-    animation-name: poolJoinIn;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-
-    .pool-form-name {
-      height: 38px;
-      width: 100%;
-      margin-bottom: 5px;
-      padding-left: 5px;
-      border: .2px rgba(51, 51, 51,.2) solid;
-    }
-
-    .pool-form-input {
-      height: 38px;
-      width: 100%;
-      padding-left: 5px;
-      border: .2px rgba(51, 51, 51,.2) solid;
-    }
-
-    .pool-form-button {
-      width: 187px;
-      height: 36px;
-      margin: 0 auto;
-      margin-top: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 15px;
-      line-height: 15px;
-      border-radius: 2px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-      transition: .2s;
-    }
-
-    .pool-form-button:hover {
-      color: #AF1E2C;
-    }
-  }
-
   .pool-join-form {
-    width: 200px;
+    width: 300px;
     position: absolute;
     top: 0px;
-    right: -225px;
-    padding: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    right: -325px;
 
     opacity: 0;
     animation-name: poolJoinIn;
@@ -174,40 +112,69 @@ $white: #F6F7F9;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 
-    .pool-form-name {
-      height: 38px;
-      width: 100%;
-      margin-bottom: 5px;
-      padding-left: 5px;
-      border: .2px rgba(51, 51, 51,.2) solid;
+
+    .poolform-group {
+      margin-bottom: 20px;
     }
 
-    .pool-form-input {
-      height: 38px;
+    .poolform-group input {
       width: 100%;
-      padding-left: 5px;
-      border: .2px rgba(51, 51, 51,.2) solid;
     }
 
-    .pool-form-button {
-      width: 187px;
-      height: 36px;
-      margin: 0 auto;
+    button {
+      height: 30px;
       margin-top: 5px;
+      width: 100px;
+      margin-bottom: 1px;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 15px;
-      line-height: 15px;
+      font-size: 12px;
+      line-height: 12px;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      background: $lt-primary;
       transition: .2s;
+      color: white;
+        i {
+        padding-right: 10px;
+        }
     }
 
-    .pool-form-button:hover {
-      color: #AF1E2C;
-    }
+    // .pool-form-name {
+    //   height: 38px;
+    //   width: 100%;
+    //   margin-bottom: 5px;
+    //   padding-left: 5px;
+    //   border: .2px rgba(51, 51, 51,.2) solid;
+    // }
+
+    // .pool-form-input {
+    //   height: 38px;
+    //   width: 100%;
+    //   padding-left: 5px;
+    //   border: .2px rgba(51, 51, 51,.2) solid;
+    // }
+
+    // .pool-form-button {
+    //   width: 187px;
+    //   height: 36px;
+    //   margin: 0 auto;
+    //   margin-top: 5px;
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   font-size: 15px;
+    //   line-height: 15px;
+    //   border-radius: 2px;
+    //   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    //   background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+    //   transition: .2s;
+    // }
+
+    // .pool-form-button:hover {
+    //   color: #AF1E2C;
+    // }
   }
 
 }
