add functionality to disable button on invalid form for create pool form

--- a/app/assets/stylesheets/components/home/create_pool_form.scss
+++ b/app/assets/stylesheets/components/home/create_pool_form.scss
@@ -27,6 +27,18 @@
   .pool-create-button:hover {
     color: #AF1E2C;
   }
+
+  .pool-create-button:hover {
+      color: #AF1E2C;
+  }
+
+  .pool-create-button:disabled {
+    cursor: not-allowed;
+
+    &:hover {
+      color: white;
+    }
+  }
 }
 
 .poolform-group {
