--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application' %>
 
     <script type="text/javascript">
-      <% if signed_in? %>
+      <% if is_signed_in? %>
         window.currentUser = <%= render("user.json.jbuilder", formats: [:json], user: current_user).html_safe %>
       <% else %> 
         window.currentUser = null
