--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -25,7 +25,7 @@ $white: #F6F7F9;
 }
 
 .pool-list {
-  margin: auto 0;
+  // margin: auto 0;
   width: 870px;
   padding: 0px 5px;
   position: relative;
