--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -7,7 +7,7 @@ $white: #F6F7F9;
 @import "authform";
 
 .base-wrapper {
-  height: 100vh;
+  min-height: 100vh;
   padding-left: 2.5%;
   padding-right: 2.5%;
   display: flex;
