--- a/app/views/auth_mailer/confirm_email.text.erb
+++ b/app/views/auth_mailer/confirm_email.text.erb
@@ -3,6 +3,6 @@ Welcome to My Online Pool, <%= @user.name %>
  
 You have successfully signed up to My Online Pool
 
-To confirm your email, please click this link: <$= @url %>
+To confirm your email, please click this link: <%= @url %>
  
 Thanks for joining and have a great day!
