more picks form

--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -36,7 +36,7 @@ $white: #F6F7F9;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: overlay;
   font-family: 'Open Sans', sans-serif;
   background: white;
 }
