--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,11 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
 */
 
 @import 'base/reset.scss';
+@import 'base/color.scss';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'components/common/_.scss';
@@ -30,10 +30,6 @@
 /******************************/
 
 html {
-  // font-family: 'Karla', sans-serif;
-  // font-family: 'Montserrat', sans-serif;
-  // font-family: 'Montez', cursive;
-  // font-family: 'Lobster', cursive;
   font-family: 'Open Sans', sans-serif;
 }
 
