changed made pick affordance

--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -152,11 +152,12 @@
     }
 
     .selected-button {
-      margin: 0 auto;
-      width: 50px;
-      border-radius: 25%;
-      transform: scale(1.2,1.2);
-      box-shadow: 0 3px 6px #1160a2, 0 3px 6px #1160a2;
+      // margin: 0 auto;
+      // width: 50px;
+      // border-radius: 25%;
+      // transform: scale(1.2,1.2);
+      // box-shadow: 0 3px 6px #1160a2, 0 3px 6px #1160a2;
+      background: grey;
     }
   }
 
