can sent email for password reset

--- a/app/views/auth_mailer/email.text.erb
+++ b/app/views/auth_mailer/email.text.erb
@@ -1,6 +1,7 @@
 Hi there, <%= @user.name %>
 ===============================================
- 
+<%= @title %>
+
 <%= @message_one %>
 
 <%= @message_two %>
