--- a/app/views/auth_mailer/email.html.erb
+++ b/app/views/auth_mailer/email.html.erb
@@ -103,7 +103,10 @@
                                   <tbody>
                                     <tr>
                                       <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:5px;text-align:center;background-color:#3498db;"> 
-                                      <a href="<%= @url %>" target="_blank" style="text-decoration:underline;background-color:#ffffff;border:solid 1px #3498db;border-radius:5px;box-sizing:border-box;color:#3498db;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#20b2aa;border-color:#20b2aa;color:#ffffff;">Activate Account</a> </td>
+                                        <a href="<%= @url %>" target="_blank" style="text-decoration:underline;background-color:#ffffff;border:solid 1px #3498db;border-radius:5px;box-sizing:border-box;color:#3498db;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#20b2aa;border-color:#20b2aa;color:#ffffff;">
+                                          <%= @button_text %>
+                                        </a> 
+                                      </td>
                                     </tr>
                                   </tbody>
                                 </table>
