create password update function and component

--- a/app/views/auth_mailer/email.text.erb
+++ b/app/views/auth_mailer/email.text.erb
@@ -6,7 +6,7 @@ Hi there, <%= @user.name %>
 
 <%= @message_two %>
 
-Please click this link: <%= @url %>
+Please paste this link into your browser: <%= @url %>
  
 Have a great day!
 
