--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -1,9 +1,3 @@
-$drk-primary: #1c1c1c;
-$lt-primary: #2d2d2d;
-$drk-text: #CDCDCD;
-$off-white: #e9ebee;
-$white: #F6F7F9;
-
 .chat-box {
   width: 870px;
   padding: 0px 5px;
@@ -70,8 +64,6 @@ $white: #F6F7F9;
       height: 30px;
       margin-top: 5px;
       width: 15%;
-      // padding: 10px 20px;
-      margin-bottom: 1px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -82,23 +74,12 @@ $white: #F6F7F9;
       background: $lt-primary;
       transition: .2s;
       color: white;
-
-      // padding: 10px 20px;
-      // font-size: 15px;
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // border-radius: 2px;
-      // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      // transition: .3s;
-      // background: $lt-primary;
-      // color: white;
-      // font-weight: bold;
-      // margin-bottom: 5px;
     }
 
     .chat-form-button:hover {
-      color: #AF1E2C;
+      color: $lt-primary;
+      border: 1px black solid;
+      background: white;
     }
   }
 }
