--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -15,6 +15,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  font-weight: bold;
 
   .picks-header {
     position: absolute;
@@ -86,7 +87,7 @@
 
       label:hover {
         .pick-button {
-          transform: scale(1.1,1.1);
+          transform: scale(1.05,1.05);
         }
       }
     }
@@ -116,6 +117,16 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: all 0.3s ease-in-out;
         cursor: pointer;
+      }
+
+      .pick-home-button {
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
+      }
+
+      .pick-away-button {
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
       }
 
       .pick-button::after {
