--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -5,6 +5,7 @@ $off-white: #e9ebee;
 $white: #F6F7F9;
 @import "standings_box";
 @import "authform";
+@import "errors";
 
 .base-wrapper {
   min-height: 100vh;
