--- a/app/assets/stylesheets/components/common/alerts.scss
+++ b/app/assets/stylesheets/components/common/alerts.scss
@@ -14,7 +14,7 @@
       &:nth-child(2) {
         font-size: 15px;
         font-weight: 700;
-        
+        text-transform: none;
       }
 
       // alert close div
