removed hover effect for button when the form is not valid

--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -72,9 +72,9 @@
       cursor: not-allowed;
 
       &:hover {
-        color: $lt-primary;
-        background: white;
-        border: 1px black solid;
+        color: white;
+        background: black;
+        border: none;
       }
     }
   }
