update auth form utility row styles

--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -26,7 +26,7 @@
     }
     .utility-row {
       font-size: 12px;
-      width: 100%;
+      align-self: flex-start;
       padding-left: 5px;
       display: flex;
       flex-direction: column;
