--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -48,7 +48,7 @@
     }
     .auth-form-button {
       height: 30px;
-      // width: 90px;
+      width: 90px;
       font-size: 15px;
       display: flex;
       justify-content: center;
