--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -23,12 +23,15 @@
 
   .picks-header {
     position: absolute;
+    width: 780px;
     top: 15px;
     left: 20px;
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 10px;
     transition: .5s;
+    display: flex;
+    justify-content: space-between;
 
     i:first-child {
       padding-right: 10px;
@@ -41,6 +44,10 @@
     i:hover {
       opacity: .5;
       cursor: pointer;
+    }
+
+    button {
+      
     }
   }
 
