--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -32,6 +32,7 @@
     transition: .5s;
     display: flex;
     justify-content: space-between;
+    box-sizing: border-box !important;
 
     i:first-child {
       padding-right: 10px;
@@ -47,7 +48,22 @@
     }
 
     button {
-      
+      height: 37px;
+      width: 135px;
+      font-size: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 3px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      background: $drk-primary;
+      transition: .2s;
+      color: white;
+    }
+    button:hover {
+      color: $lt-primary;
+      background: white;
+      border: 1px black solid;
     }
   }
 
