toggle join form after joining, remove animation on splash

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -50,11 +50,11 @@ $drk-text: #CDCDCD;
   span {
     margin-left: 100px;
     opacity: 0;
-    animation-name: welcomeIn;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
+    // animation-name: welcomeIn;
+    // animation-iteration-count: 1;
+    // animation-timing-function: ease-out;
+    // animation-duration: 3s;
+    // animation-fill-mode: forwards;
   }
 
   h1 {
