add logic to remove load more button, update styling for messages

--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   .auth-form {
-    width: 400px;
+    // width: 400px;
     font-size: 20px;
     margin-bottom: 15px;
     display: flex;
@@ -89,10 +89,9 @@
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     display: block;
-    width: 300px;
+    width: 100%;
     border: none;
     border-bottom: 1px solid #757575;
-
 
     &:focus {
       outline: none;
