--- a/app/assets/stylesheets/components/home/create_pool_form.scss
+++ b/app/assets/stylesheets/components/home/create_pool_form.scss
@@ -51,7 +51,7 @@
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     display: block;
-    width: 400px;
+    width: 100%;
     border: none;
     border-bottom: 1px solid #757575;
 
