--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -46,6 +46,14 @@
     display: flex;
     flex-direction: column;
 
+    .poolform-group {
+      margin-bottom: 0;
+
+      input {
+        font-size: 14px;
+      }
+    }
+
     .chat-input {
       height: 30px;
       width: 100%;
