--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -25,17 +25,39 @@
     .chat-box-item {
       margin-bottom: 10px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: flex-start;
 
-      .author {
-        font-size: 15px;
-        font-weight: bold;
+      .message-info {
+        display: flex;
+
+        font-size: 13px;
         margin-bottom: 5px;
+        line-height: 18px;
+
+        .message-author {
+          font-weight: 500;
+          margin-right: 8px;
+        }
+
+        .message-time {
+          color: rgb(136, 136, 136);
+        }
       }
 
-      .message {
-        font-size: 12px;
+      .message-picture {
+        margin-right: 10px;
+
+        span {
+          display: block;
+          height: 40px;
+          width: 40px;
+          border-radius: 40px;
+        }
+      }
+
+      .message-body {
+        font-size: 14px;
       }
     }
   }
