--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -53,6 +53,11 @@
           height: 40px;
           width: 40px;
           border-radius: 40px;
+          color: white;
+          font-weight: 700;
+          text-align: center;
+          line-height: 40px;
+          font-size: 22px;
         }
       }
 
