made message box more dynamic

--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -4,7 +4,7 @@ $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
 
-.modboard {
+.modboard-box {
   height: 287px;
   width: 870px;
   padding: 0px 5px;
