--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -8,13 +8,15 @@
 }
 
 .picks-container {
+  margin: 20px auto;
+  width: 820px;
   padding: 10px 20px;
   padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  // position: relative;
   font-weight: bold;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   background: #e5e5e4;
