--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -1,5 +1,6 @@
 @import "pool_list";
 @import "create_pool_form";
+@import "join_pool_form";
 
 .home-container {
   height: 100%;
@@ -11,7 +12,7 @@
   justify-content: flex-start;
 }
 
-.home-top {
+.home-bottom {
   width: 100%;
   min-height: 374px;
   display: flex;
@@ -55,41 +56,11 @@
   background: $lt-primary;
 }
 
-.home-bottom {
+.home-top {
   min-height: 200px;
   padding: 20px 0px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-}
-
-.home-message {
-  width: 420px;
-  margin: 5px;
-  margin-bottom: 10px;
-  padding: 5px;
-  padding-bottom: 0px;
-  background: white;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  border-radius: 2px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  .title {
-    width: 100%;
-    padding: 10px 5px;
-    margin-bottom: 10px;
-    font-size: 18px;
-    line-height: 18px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-  }
-
-  div {
-    padding: 0px 5px;
-    padding-bottom: 10px;
-    font-size: 15px;
-  }
 }
