--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -63,22 +63,24 @@ $white: #F6F7F9;
     }
   }
 
-  .pool-list-item {
-    display: inline-flex;
-    transition: .25s;
-    padding-left: 5px;
+  .pool-list-bottom {
+    min-height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 
-    div {
-      padding: 10px 5px;
-      cursor: pointer;
-    }
-
-    div:hover {
-       color: #AF1E2C;
-    }
-
-    i {
-      margin-right: 5px;
+    .pool-list-item {
+      display: inline-flex;
+      transition: .25s;
+      padding-left: 5px;
+      div:hover {
+        cursor: pointer;
+        color: $drk-text;
+      }
+      .fa-times {
+        margin-right: 5px;
+        color: red;
+      }
     }
   }
 }
