--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -12,7 +12,8 @@
 
 .pool-standings {
   width: 100%;
-  min-height: 374px;
+  // min-height: 374px;
+  padding: 20px 0px;
   display: flex;
   flex-direction: row;
   justify-content: center;
