--- a/app/assets/stylesheets/components/common/pool_standings_box.scss
+++ b/app/assets/stylesheets/components/common/pool_standings_box.scss
@@ -22,7 +22,8 @@ $off-white: #e9ebee;
 .pool-standings-box-item {
   display: flex;
   border-top: .2px rgba(51, 51, 51,.2) solid;
-  padding: 5px;
+  padding: 5px 0px;
+  font-size: 15px;
 
   div:nth-child(3) {
     color: inherit;
@@ -37,8 +38,9 @@ $off-white: #e9ebee;
 .pool-standings-box-top-item {
   display: flex;
   margin-top: 10px;
-  padding: 5px;
+  padding: 5px 0px;
   font-weight: bold;
+  font-size: 15px;
 
   .title, .pool {
     width: 125px;
