remove pool confirm modal done

--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -1,6 +1,7 @@
 @import "pool_list";
 @import "create_pool_form";
 @import "join_pool_form";
+@import "confirm_form";
 
 .home-container {
   height: 100%;
