--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -68,6 +68,7 @@ $white: #F6F7F9;
     flex-direction: column;
     justify-content: space-around;
     overflow-y: overlay;
+    padding-left: 5px;
 
     .pool-list-item {
       display: inline-flex;
@@ -77,13 +78,9 @@ $white: #F6F7F9;
         cursor: pointer;
         color: $drk-text;
       }
-      .fa-times {
+      .fa-caret-right {
         margin-right: 5px;
-        color: red;
-        transition: .2s;
-      }
-      .fa-times:hover {
-        color: black;
+        padding-top: 3px;
       }
     }
   }
