--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -48,7 +48,7 @@
     button {
       height: 37px;
       width: 135px;
-      font-size: 20px;
+      font-size: 17px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -125,6 +125,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
       }
 
       .selection-form-date, .selection-form-time, .selection-form-line, .selection-form-over {
@@ -134,6 +135,22 @@
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+
+      .selection-form-time {
+        font-size: 20px;
+      }
+
+      .time-props {
+        padding-left: 3px;  
+        font-size: 8px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        div {
+          line-height: 8px;
+        }
       }
 
       .pick-button {
