moved error message to leftside of input

--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -155,7 +155,7 @@
 
   .form-group-error-message {
     position: absolute;
-    right: 0;
+    left: 0;
     bottom: -28px;
     display: inline-block;
     font-size: 13px;
