pickform class evaluation functions

--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -192,5 +192,13 @@
     .selected-button {
       background: rgba(17, 96, 162, .2);
     }
+
+    .correct-pick-button {
+      background: #90C695;
+    }
+
+    .incorrect-pick-button {
+      background: #EC644B;
+    }
   }
 
