flattened picks form

--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -18,8 +18,8 @@
   justify-content: center;
   // position: relative;
   font-weight: bold;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  background: #e5e5e4;
+  // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  // background: #e5e5e4;
   border-radius: 2px;
 
   .picks-header {
